public/stylesheets/main.css
/* ... */
#overlay .users li:hover, #overlay li.close:hover, ol.messages .paginated:hover {
    background-color: #111;
}

#overlay .users li:hover span {
    color: #fff;
}

#overlay li .who img, #overlay .users li img {
    display: block;
    float: left;
    height: 50px;
    margin-right: 10px;
    width: 50px;
}

#overlay .users li a {
    display: block;
    text-decoration: none;
    width: 100%;
}

#overlay .users li span {
    color: #111;
    display: block;
    float: left;
    font-family: 'Oswald';
    font-size: 18px;
    line-height: 25px;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 430px;
}

#overlay .users li em {
    color: #aaa;
    font-variant: italic;
}

#overlay .users li:hover em {
    color: #eee;
    padding-left: 10px;
}

#overlay .message-summary li .details, #overlay .message-summary li p {
    float: left;
    margin-left: 20px;
    text-align: left;
    width: 400px;
}

#overlay .message-summary li p {
    font-size: 14px;
    line-height: 17px;
    margin-top: 5px;
}

#overlay .message-summary li > p > span {
    color: #999;
    display: block;
    font-size: 12px;
    margin-top: 10px;
    width: 100%;
}

#overlay .message-summary li time {
    padding: 3px 5px;
}

#overlay li p iframe, #overlay li p video, #overlay li p audio, #overlay li p object {
    height: 225px;
    margin: 2px 0;
    width: 400px;
}

#overlay li p img {
    margin: 2px 0;
    max-width: 400px;
}

#overlay li:first-child p iframe, #overlay li:first-child p video,
#overlay li:first-child p audio, #overlay li:first-child p object, #overlay li:first-child p img {
    margin: 10px 0 0;
}

#overlay .info {
    clear: both;
    float: left;
    width: 100%;
}

#overlay .info li {
    background-color: #eee;
    border-radius: 5px;
    color: #888;
    float: left;
    font-family: 'Oswald';
    font-size: 18px;
    line-height: 20px;
    margin: 15px 2px;
    padding: 5px 10px 4px 15px;
    text-transform: uppercase;
    width: 27.5%;
}

#overlay li .info li span {
    color: #111;
}

#avatar-pings img {
    height: 30px;
    margin: 2px;
    width: 30px;
}

#avatar-pings li {
    float: left;
    width: 34px;
}

#thread-detail, #avatar-pings {
    display: block;
    float: left;
    width: 100%;
}

.dashboard-content {
    background-color: #f8f8f8;
    border-left: 1px solid #eee;
    border-right: 1px solid #eee;
    float: left;
    position: relative;
    width: 600px;
}

.dashboard-content.error h1 {
    font-family: 'Oswald';
    font-size: 40px;
    margin-top: 30px;
    padding: 30px 0 60px;
    text-align: center;
    text-transform: uppercase;
}

#profile img {
    float: left;
    margin-left: 20px;
    max-height: 180px;
    width: 180px;
}

#profile .user-info {
    float: left;
    padding: 10px 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    width: 340px;
}

#profile .user-info h2 {
    color: #222;
    display: block;
    float: left;
    font-family: 'Oswald';
    font-size: 40px;
    margin-bottom: 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    text-shadow: #fff 0 1px 0, #eee 0 -1px 0;
    text-transform: uppercase;
    width: 360px;
}

#profile .followers, #profile .following {
    cursor: pointer;
}

#profile .followers:hover, #profile .following:hover {
    color: #20c2c0;
}

#profile .user-info h3 {
    color: #222;
    float: left;
    font-size: 20px;
    line-height: 30px;
    margin-bottom: 10px;
    width: 50%;
}

#profile .user-info h3.small {
    color: #888;
    font-size: 15px;
    margin-bottom: 0;
    width: 100%;
}

#profile .user-info > span {
    color: #aaa;
    font-size: 13px;
}

#profile .user-info p {
    clear: both;
    color: #888;
    float: left;
    font-size: 14px;
    line-height: 18px;
    margin-top: 15px;
}

#profile .user-info p a, .username, .dashboard-content.error a {
    color: #20c2c0;
    text-decoration: none;
}

.dashboard-content.error a {
    display: block;
    font-size: 30px;
    padding-bottom: 50px;
    text-align: center;
}

#profile .user-info ol.actions li {
    background-color: #ccc;
    color: #222;
    float: left;
    width: 100px;
}

#write, #profile {
    margin-top: 32px;
}

#write.profile {
    margin-top: 0;
}

#write, section {
    clear: both;
    float: left;
    padding: 20px;
}

section {
    padding-top: 0;
}

section.public li h1 {
    color: #888;
    font-size: 30px;
    line-height: 35px;
    margin-top: 50px;
    padding: 20px;
    text-align: center;
}

#write {
    padding-bottom: 5px;
}

#write textarea {
    border: 0;
    border-radius: 5px;
    color: #888;
    font-family: Arial;
    font-size: 15px;
    height: 65px;
    line-height: 20px;
    margin-bottom: 10px;
    overflow: auto;
    padding: 10px;
    width: 540px;
    resize: none;
}

#write textarea.on {
    color: #111;
}

#count {
    color: #dedede;
    font-family: 'Oswald';
    font-size: 28px;
}

#count.on {
    color: #111;
}

button[type="submit"] {
    margin-bottom: 30px;
}

button[type="submit"], section.public li a {
    background-color: #74b908;
    border: 0;
    border-radius: 5px;
    color: #fff;
    cursor: pointer;
    float: right;
    font-family: 'Oswald';
    font-size: 18px;
    line-height: 18px;
    padding: 3px 10px;
    text-transform: uppercase;
}

button[type="submit"]:hover, section.public li a:hover, #overlay .users li.close:hover {
    background-color: #111;
    color: #eee;
}

section.public li a {
    display: block;
    float: none;
    font-size: 20px;
    margin: 10px auto;
    padding: 6px 10px;
    text-align: center;
    text-decoration: none;
    width: 150px;
}

ol.tabs li, .action-buttons li {
    background-color: #ccc;
    border-radius: 5px;
    color: #aaa;
    cursor: pointer;
    float: left;
    margin: 2px 2px 5px;
    font-family: 'Oswald';
    font-size: 20px;
    line-height: 20px;
    padding: 5px 12px;
    text-transform: uppercase;
}

ol.tabs li:first-child {
    margin-left: 0;
}
/* ... */

